Guestbook Guestbook + Bootstrap update

--- a/working/09_BootstrappedGuestbook/src/main/resources/templates/index.html
+++ b/working/09_BootstrappedGuestbook/src/main/resources/templates/index.html
@@ -61,7 +61,7 @@
             <th>No</th>
             <th>Date</th>
             <th>
-                <a th:href="@{/}">Author</a>
+                <a th:href="@{/web/guestbook/sortByAuthor}">Author</a>
             </th>
             <th>Content</th>
         </tr>
