Guestbook Rest + Bootstrap update

--- a/working/10_BootstrappedGuestbookRest/src/main/resources/templates/index.html
+++ b/working/10_BootstrappedGuestbookRest/src/main/resources/templates/index.html
@@ -48,8 +48,7 @@
                                    class="form-control"/>
                             <input class="form-control" id="content" name="content" type="text"
                                    placeholder="Please enter your message here..."/>
-                            <button id="send" type="button" class="btn btn-primary">Submit form
-                            </button>
+                            <button id="send" type="button" class="btn btn-primary">Submit form</button>
                         </div>
                     </fieldset>
                 </form>
@@ -108,7 +107,6 @@
 
     // get all
    getData("/guestbook/getall");
-
 
 </script>
 </body>
